use correct QDialog::finished signal prototype

Patch fixing the issue : SIGNAL(finished()) => SIGNAL(finished(int))
Courtesy of Loïc Yhuel, thanks.

BUG: 372292